--- a/kontakt.html
+++ b/kontakt.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Booking & Kontakt – DR. GRAY & MRS. DR. GRAY</title>
 
-  <!-- WICHTIG: genau diese Zeile bindet dein Design ein -->
-  <link rel="stylesheet" href="style.css">
+  <!-- wichtig: genau diese Datei hast du im Repo -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- HEADER / NAV – simpel gehalten, CSS macht das Design -->
-  <header>
-    <div class="site-brand">
-      DR. GRAY & MRS. DR. GRAY
-    </div>
+  <!-- HEADER / NAV wie auf den anderen Seiten -->
+  <header class="site-header">
+    <div class="site-brand">DR. GRAY &amp; MRS. DR. GRAY</div>
     <nav class="main-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -28,20 +26,27 @@
   </header>
 
   <main>
+    <!-- SECTION im gleichen Stil wie die anderen Seiten -->
     <section id="contact" class="section section-invert">
       <div class="section-head">
-        <h1>Booking & Kontakt</h1>
+        <h1>Booking &amp; Kontakt</h1>
         <p>Management • Booking • Presse</p>
       </div>
 
       <div class="contact">
         <ul class="contact-list">
-          <li><strong>Booking:</strong> <a href="mailto:booking@drgray-mrsdrgray.com">booking@drgray-mrsdrgray.com</a></li>
-          <li><strong>Management:</strong> <a href="mailto:management@drgray-mrsdrgray.com">management@drgray-mrsdrgray.com</a></li>
-          <li><strong>Presse:</strong> <a href="mailto:press@drgray-mrsdrgray.com">press@drgray-mrsdrgray.com</a></li>
+          <li><strong>Booking:</strong>
+            <a href="mailto:booking@drgray-mrsdrgray.com">booking@drgray-mrsdrgray.com</a>
+          </li>
+          <li><strong>Management:</strong>
+            <a href="mailto:management@drgray-mrsdrgray.com">management@drgray-mrsdrgray.com</a>
+          </li>
+          <li><strong>Presse:</strong>
+            <a href="mailto:press@drgray-mrsdrgray.com">press@drgray-mrsdrgray.com</a>
+          </li>
         </ul>
 
-        <!-- FORMULAR – jetzt über FORMSPREE -->
+        <!-- Formular über Formspree -->
         <form class="contact-form" action="https://formspree.io/f/xeobykwe" method="POST">
           <div class="row">
             <input type="text" name="name" placeholder="Dein Name" required>
@@ -53,15 +58,21 @@
       </div>
 
       <div class="socials">
-        <a href="https://on.soundcloud.com/PzmQ0bF4Z28epDB0yz" target="_blank" rel="noopener">SoundCloud</a>
-        <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank" rel="noopener">TikTok (DR.GRAY)</a>
-        <a href="https://www.tiktok.com/@ktina1986" target="_blank" rel="noopener">TikTok (MRS. DR. GRAY)</a>
+        <a href="https://on.soundcloud.com/PzmQ0bF4Z28epDB0yz" target="_blank" rel="noopener">
+          SoundCloud
+        </a>
+        <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank" rel="noopener">
+          TikTok (DR.GRAY)
+        </a>
+        <a href="https://www.tiktok.com/@ktina1986" target="_blank" rel="noopener">
+          TikTok (MRS. DR. GRAY)
+        </a>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <p>© 2024 DR. GRAY & MRS. DR. GRAY • Alle Rechte vorbehalten.</p>
+    <p>© 2024 DR. GRAY &amp; MRS. DR. GRAY • Alle Rechte vorbehalten.</p>
   </footer>
 
 </body>
