--- a/kontakt.html
+++ b/kontakt.html
@@ -1,76 +1,78 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booking & Kontakt – Dr. Gray & Mrs. Dr. Gray</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Booking & Kontakt – DR. GRAY & MRS. DR. GRAY</title>
 
-    <link rel="stylesheet" href="styles.css">
+  <!-- RICHTIG: style.css (nicht styles.css!) -->
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
-<!-- Navigation -->
-<header>
-    <div class="logo-text">DR. GRAY & MRS. DR. GRAY</div>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="bio.html">Bio</a></li>
-            <li><a href="musik.html">Musik</a></li>
-            <li><a href="videos.html">Videos</a></li>
-            <li><a href="shop.html">Shop</a></li>
-            <li><a class="active" href="kontakt.html">Kontakt</a></li>
-        </ul>
+  <!-- HEADER -->
+  <header class="site-header">
+    <a class="brand" href="index.html">DR. GRAY & MRS. DR. GRAY</a>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="bio.html">Bio</a>
+      <a href="musik.html">Musik</a>
+      <a href="videos.html">Videos</a>
+      <a href="shop.html">Shop</a>
+      <a href="kontakt.html" class="btn btn-small">Kontakt</a>
     </nav>
-</header>
+    <button id="menuToggle" aria-label="Menü öffnen" class="menu-toggle">☰</button>
+  </header>
 
-<!-- HERO / TITELBEREICH -->
-<section class="hero-small">
-    <div class="hero-content">
-        <h1 class="glow-title">Booking & Kontakt</h1>
-        <p class="hero-sub">Feinster Techno mit Herz & Seele – jetzt Anfrage senden.</p>
-    </div>
-</section>
+  <main>
+    <!-- HERO wie auf Home, ohne Logo -->
+    <section class="hero" aria-label="Booking & Kontakt">
+      <div class="hero-media" role="img" aria-label="DJ-Controller Hintergrund"></div>
+      <div class="hero-content">
+        <h1>
+          <span class="accent">Booking</span> & Kontakt
+        </h1>
+        <p class="kicker">Feinster Techno mit Herz & Seele – jetzt Anfrage senden.</p>
+      </div>
+    </section>
 
-<!-- INHALTSBEREICH -->
-<section class="content-section">
-    <div class="content-wrapper">
+    <!-- KONTAKTBEREICH -->
+    <section id="contact" class="section section-invert">
+      <div class="section-head">
+        <h2>Management & Booking</h2>
+        <p>Für Clubs, Festivals, Livestreams & Special Events</p>
+      </div>
 
-        <!-- Kontaktinfos -->
-        <div class="contact-info">
-            <h2>Management & Booking</h2>
-            <p>Für Clubs, Festivals, Livestreams & Special Events</p>
+      <div class="contact">
+        <ul>
+          <li><strong>Booking:</strong> <a href="mailto:booking@drgray-mrsdrgray.com">booking@drgray-mrsdrgray.com</a></li>
+          <li><strong>Management:</strong> <a href="mailto:management@drgray-mrsdrgray.com">management@drgray-mrsdrgray.com</a></li>
+          <li><strong>Presse:</strong> <a href="mailto:press@drgray-mrsdrgray.com">press@drgray-mrsdrgray.com</a></li>
+        </ul>
 
-            <ul class="contact-list">
-                <li><strong>Booking:</strong> <a href="mailto:booking@drgray-mrsdrgray.com">booking@drgray-mrsdrgray.com</a></li>
-                <li><strong>Management:</strong> <a href="mailto:management@drgray-mrsdrgray.com">management@drgray-mrsdrgray.com</a></li>
-                <li><strong>Presse:</strong> <a href="mailto:press@drgray-mrsdrgray.com">press@drgray-mrsdrgray.com</a></li>
-            </ul>
-        </div>
+        <!-- Formspree Formular -->
+        <form class="contact-form" action="https://formspree.io/f/xeobykwe" method="POST">
+          <div class="row">
+            <input type="text" name="name" placeholder="Dein Name" required />
+            <input type="email" name="email" placeholder="Deine E-Mail" required />
+          </div>
+          <textarea name="message" rows="6" placeholder="Deine Nachricht" required></textarea>
+          <button type="submit" class="btn">Senden</button>
+        </form>
+      </div>
 
-        <!-- Formular -->
-        <div class="contact-form-box">
-            <form action="https://formspree.io/f/xeobykwe" method="POST">
+      <div class="socials">
+        <a href="https://on.soundcloud.com/PzmQ0bF4Z28epDB0yz">SoundCloud</a>
+        <a href="https://www.tiktok.com/@dr.gray.sic">TikTok (DR.GRAY)</a>
+        <a href="https://www.tiktok.com/@ktina1986">TikTok (MRS. DR. GRAY)</a>
+      </div>
+    </section>
+  </main>
 
-                <div class="form-row">
-                    <input type="text" name="name" placeholder="Dein Name" required>
-                    <input type="email" name="email" placeholder="Deine E-Mail" required>
-                </div>
-
-                <textarea name="message" placeholder="Deine Nachricht" rows="6" required></textarea>
-
-                <button type="submit" class="btn-yellow">Senden</button>
-            </form>
-        </div>
-
-    </div>
-</section>
-
-<!-- FOOTER -->
-<footer>
+  <footer class="site-footer">
     <p>© 2024 DR. GRAY & MRS. DR. GRAY • Alle Rechte vorbehalten.</p>
-</footer>
+  </footer>
 
+  <script src="main.js"></script>
 </body>
 </html>
